# quake2-modded-dll

./: .gitignore  BUILDING.md  CMakeLists.txt  THIRDPERSON.md  compile-windows-clang.sh  compile-windows-debug.sh  compile-windows.sh  compile.sh
build-windows-clang/: .ninja_deps  .ninja_log  build.ninja
original/rogue/: p_client.c
rerelease/: cg_main.cpp  cg_screen.cpp  cvars.txt  g_chase.cpp  g_cmds.cpp  g_local.h  g_main.cpp  g_phys.cpp  g_save.cpp  g_thirdperson.cpp  g_thirdperson.h  g_weapon.cpp  game.h  m_move.cpp  p_client.cpp  p_view.cpp  p_view.h  q2_modelindex_wrapper.cpp  q2_modelindex_wrapper.h  q2game_api.h  q_mathlib.h  q_std.cpp  q_std.h  q_vec3.h
rerelease/rogue/: g_rogue_newai.cpp  m_rogue_stalker.cpp
